--- a/css/estilos.css
+++ b/css/estilos.css
@@ -22,6 +22,7 @@ body {
 
 header {
     width: 100%;
+    background: url('../img/bg.jpg') #281a0c;
     background-size: cover;
     background-attachment: fixed;
     background-position: center 0;
@@ -30,6 +31,11 @@ header {
 header .contenedor {
     position: relative;
     height: 700px;
+}
+
+header .menu {
+    width: 100%;
+    text-align: right;
 }
 
 header .menu a {
@@ -79,6 +85,7 @@ header .textos h3 {
     overflow: visible;
     position: relative;
 }
+
 .main .acerca-de .foto {
     width: 80%;
     position: absolute;
@@ -99,20 +106,73 @@ header .textos h3 {
     width: 50%;
     position: relative;
     /*top: 500px;*/
-    top: 150px;
+    top: 300px;
     z-index: 1;
-    box-shadow: 0px;
+    float: right;
+    box-shadow: 0px 0px 15px rgba(0,0,0.35);
 }
 
 .main .acerca-de article h3 {
     font-size: 50px;
     font-weight: 300;
-    margin-bottom: 40p;
+    margin-bottom: 40px;
 }
 
 .margin .acerca-de article p {
-    line-height: 20px;
+    line-height: 28px;
     margin-bottom: 15px;
+}
+
+.main .menu {
+    padding-top: 570px;
+    margin-bottom: 50px;
+}
+
+.main .menu .titulo {
+    font-size: 40px;
+    font-weight: 300;
+    text-align: center;
+    margin-bottom: 40px ;
+}    
+
+.main .menu .contenedor-menu,
+.main .menu .contenedor-menu2 {
+    border:1px solid #000;
+    background: transparent;
+    padding: 10px; 
+    overflow: hidden;
+}
+
+.main .menu article {
+    width: 50%;
+    float: left;
+    padding: 20px;
+}
+
+.main .menu .categoria {
+    font-size: 22px;
+    font-weight: 700;
+    margin-bottom: 40px;
+    text-align: center;
+}
+
+.main .menu .platillo {
+    margin-bottom: 30px;
+    padding-bottom: 20px;
+    border-radius: 4px dotted #000;
+    overflow: hidden;
+}
+
+.main .menu .nombre {
+    font-size: 20px;
+    margin-bottom: 15px;
+    float: left;
+}
+
+.main .menu .precio {
+    font-size: 20px;
+    margin-bottom: 15px;
+    float: right;
 }
 
 .main .menu .descripcion {
@@ -203,4 +263,85 @@ footer .copyright {
     text-align: center;
     padding: 15px 0;
     color: #fff;
+}
+
+/* ---- ---- MEDIA QUERIES ---- ----*/
+@media screen and (max-width: 800px) {
+    header .contenedor {
+        position: static;
+        height: auto;
+    }
+
+    header .textos {
+        position: static;
+        margin: 100px 0;
+    }
+
+    header .menu {
+        text-align: center;
+    }
+
+    header .menu a {
+        text-align: 10px 20px;
+    }
+
+    header .textos .nombre {
+        font-size: 30px;
+    }
+
+    header .textos h3 {
+        font-size: 18px;
+    }
+
+    .main .acerca-de .foto {
+        width: 100%;
+        position: relative;
+    }
+
+    .main .acerca-de article {
+        position: relative;
+        width: 100%;
+        top: -50px;
+        transform: translate(0px, 0);
+    }
+
+    .main .menu {
+        padding-top: 300px;
+    }
+
+    .main .menu article {
+        width: 100%;
+    }
+
+    .main .galeria .foto {
+        width: 50%;
+    }
+
+    .main .mapa {
+        width: 80%;
+        margin: auto;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .main .acerca-de article h3 {
+        font-size: 34px;
+        margin-bottom: 10px;
+    }
+
+    .main .menu article .nombre,
+    .main .menu article .precio {
+        font-size: 16px;
+        line-height: 16px;
+    }
+
+    .main .ubicacion .direccion {
+        margin-bottom: 15px;
+    }
+
+    .main .ubicacion .direccion,
+    .main .ubicacion .horarios {
+        width: 100%;
+        text-align: center;
+    }
 }
